# RustyMalDevSnippets

./: .gitignore  README.md
rust_process_inject/: Cargo.toml  README.md
rust_process_inject/src/: main.rs
